feat: add creating new category (admin)
