# src/helpers/productIdsValidation.ts
@@ -1,8 +1,15 @@
 import { ProductRepository } from '../DA/DBManager';
 import HttpException from '../exceptions/exceptions';
+import { IProduct } from '../types/types';
 
-const checkProductIdsValid = async (productIds: string[]) => {
-  const productsExist = await ProductRepository.getProductsByIds(productIds);
+const checkProductIdsValid = async (productIdsToCheck: string[], products?: IProduct[]) => {
+  let productsExist;
+  if (!products) {
+    productsExist = await ProductRepository.getProductsByIds(productIdsToCheck);
+  } else {
+    productsExist = products;
+  }
+
   if (!productsExist) {
     throw new HttpException(500, 'An error ocured trying to get products.');
   }
@@ -14,8 +21,11 @@ const checkProductIdsValid = async (productIds: string[]) => {
     }
   });
 
-  const productIdsNotExist = productIds.filter((id) => !productIdsFound?.includes(id));
-  return productIdsNotExist;
+  const productIdsNotExist = productIdsToCheck.filter((id) => !productIdsFound?.includes(id));
+
+  if (productIdsNotExist.length) {
+    throw new HttpException(404, `Products with ids: '${productIdsNotExist.join(',')}' do not exist.`);
+  }
 };
 
 export default checkProductIdsValid;
