# src/routes/admin/categories.admin.route.ts
@@ -3,6 +3,8 @@ import HttpException from '../../exceptions/exceptions';
 import authenticateTokenMiddleware from '../../middlewares/authorization/authorization.middleware';
 import checkUserRoleMiddleware from '../../middlewares/checkUserRole/checkUserRole.middleware';
 import { CategoryService } from '../../service/categories.service';
+import { validateCreateCategorySchema } from '../../validators/validationSchemas';
+import validationResultMiddleware from '../../middlewares/validationResultHandler/validationResultHandler.middleware';
 
 const categoryService = new CategoryService();
 
@@ -21,6 +23,29 @@ export const CategoriesAdminRouter = (router: Router): void => {
           resp.status(200).json({ result });
         } else {
           throw new HttpException(404, `Category with id=${id} not found.`);
+        }
+      } catch (err) {
+        next(err);
+      }
+    }
+  );
+
+  router.post(
+    '/admin/categories',
+    authenticateTokenMiddleware,
+    (req: Request, resp: Response, next: NextFunction) => {
+      checkUserRoleMiddleware(req, resp, next, 'admin');
+    },
+    validateCreateCategorySchema,
+    validationResultMiddleware,
+    async (req: Request, resp: Response, next: NextFunction) => {
+      const { displayName, products } = req.body;
+      try {
+        const result = await categoryService.createCategory(displayName, products);
+        if (result) {
+          resp.status(201).json({ result });
+        } else {
+          throw new HttpException(500, 'An error occured trying to create new category.');
         }
       } catch (err) {
         next(err);
